--- a/LiveCoding/style.css
+++ b/LiveCoding/style.css
@@ -18,7 +18,9 @@
     margin-top: 33px;
     margin-bottom: 33px;
 }
-
+#nightday{
+    width: 80px
+}
 h1 {
     font-size: 50px;
     text-align: center;
@@ -26,7 +28,10 @@ h1 {
     padding: 20px;
     margin: 0px;
 }
-
+a{
+    color: black;
+    text-decoration: none;
+}
 body {
     margin: 0px;
 }
